# htrust

./: .env.example  .gitignore  Cargo.toml  IDEA.md  Makefile  README.md
src/: cli.rs  client.rs  config.rs  main.rs  storage.rs
src/commands/: info.rs  minio.rs  mod.rs  trust.rs  verify.rs
tests/: lib.sh  run.sh  test_email.sh  test_info.sh  test_ip.sh  test_mobile.sh  test_url.sh
tests/asserts/: lib.sh  run.sh  test_email_asserts.sh  test_info_asserts.sh  test_ip_asserts.sh  test_mobile_asserts.sh  test_url_asserts.sh
