[package]
name = "htrust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Open Source Trust for Humans"
repository = "https://github.com/openapi/htrust"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
